--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -24,7 +24,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --network-timeout 1000000
+        run: yarn install --network-timeout 1000000
 
       - name: Publish Windows
         run: yarn package:ci
