--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -22,9 +22,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version-file: '.nvmrc'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --network-timeout 1000000
+        run: yarn install --frozen-lockfile --network-timeout 1000000 --no-bin-links
 
       - name: Publish Windows
         run: yarn package:ci
